# EnigmaM3

./: CMakeLists.txt  README.md
apps/: Application.cpp  Application.hpp  CMakeLists.txt  EM3defs.h  GlobalPreferencesValues.cpp  GlobalPreferencesValues.hpp  GraphicUserInterface.cpp  GraphicUserInterface.hpp  UserPreferences.cpp  UserPreferences.hpp  app.cpp  main.cpp  main.hpp  stringModifier.hpp
apps/Forms/: AboutDialog.cpp  AboutDialog.h  Forms.cpp  Forms.h  MainFrame.cpp  MainFrame.h  PlugBoardSettingsDialog.cpp  PlugBoardSettingsDialog.h  PreferencesDialog.cpp  PreferencesDialog.hpp
apps/res/: ENIGMA_M3.bmp.h
include/enigmaM3/: enigma.h
src/: CMakeLists.txt  enigma.cpp
